mengganti ke index html

--- a/Menu.html
+++ b/Menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.css">
     <link rel="icon" href="foto/Custom_logo-removebg-preview 2.png">
     <title>Custom Kopi</title>
 </head>
@@ -13,7 +13,7 @@
         <a href=""><img style="width: 10em;" src="foto/Custom logo 2 .PNG" alt="Apotik Kopi.PNG"></a>
 
         <div class="navbar">
-            <a href="Custom_kopi.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="Tentang_kami.html">Tentang Kami</a>
             <a href="Menu.html">Menu</a>
             <a href="Contact.html">Contact</a>
