--- a/Menu.html
+++ b/Menu.html
@@ -10,7 +10,7 @@
 
 <body style="background-color: whitesmoke;">
     <nav class="nav">
-        <a href=""><img style="width: 10em;" src="foto/Custom logo 2 .PNG" alt="Apotik Kopi.PNG"></a>
+        <a href=""><img style="width: 10em;" src="foto/Custom_logo_2_-removebg-preview.png" alt="Apotik Kopi.PNG"></a>
 
         <div class="navbar">
             <a href="index.html">Home</a>
