--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav class="nav">
-        <a href=""><img style="width: 10em;" src="foto/Custom logo 2 .PNG" alt="Apotik Kopi.PNG"></a>
+        <a href=""><img style="width: 10em;" src="foto/Custom_logo-removebg-preview 2.png.PNG" alt="Apotik Kopi.PNG"></a>
 
         <div class="navbar">
             <a href="index.html">Home</a>
