--- a/Contact.html
+++ b/Contact.html
@@ -10,10 +10,10 @@
 
 <body style="background-color: whitesmoke;">
     <nav class="nav">
-        <a href=""><img style="width: 10em;" src="foto/Custom logo 2 .PNG" alt="Apotik Kopi.PNG"></a>
+        <a href=""><img style="width: 10em;" src="foto/Custom_logo_2_-removebg-preview.png" alt="Apotik Kopi.PNG"></a>
 
         <div class="navbar">
-            <a href="index.html.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="Tentang_kami.html">Tentang Kami</a>
             <a href="Menu.html">Menu</a>
             <a href="Contact.html">Contact</a>
