--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </li>
         </ul>
 
-        <div class="menu">   
+        <div class="menu">
             <div class="kotak">
                 <img src="foto/yanapi-senaud-6HR8vpjYUHo-unsplash (1).jpg" alt="">
                 <h3>OUR BEANS</h3>
@@ -70,12 +70,34 @@
             <a class="a_hover" href="Menu.html">Selengkapnya</a>
         </div>
     </div>
-    <footer class="footer">
-        <img class="footer_logo" src="foto/Custom_logo_2_-removebg-preview.png" alt="Custom logo">
-        <a href="https://www.instagram.com/custom_kopi.id/"><img class="footer_img" src="foto/icons8-instagram-50.png" alt="">custom_kopi.id</a>
-        <a href="https://wa.me/081000000000"><img class="footer_img" src="foto/icons8-whatsapp-50.png" alt="">081000000000</a>
-        <a href="https://maps.app.goo.gl/3bcbgzhW2fwgwUXr5"><img class="footer_img" src="foto/icons8-location-50.png" alt="">Custom location</a>
+    
+    <footer class="footer-container">
+        <div class="footer-content">
+            <h3>Contact Us</h3>
+            <p>Email : CustomKopi@gmail.com</p>
+            <p>WhatsApp : 081000000000</p>
+            <p>Address : Jl. Raya Lama No.11, Babat, Kabupaten Lamongan, Jawa Timur</p>
+        </div>
+        <div class="footer-content">
+            <h3>Quick Links</h3>
+            <ul class="list">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Tentang_kami.html">Tentang Kami</a></li>
+                <li><a href="Menu.html">Menu</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+            </ul>
+        </div>
+        <div class="footer-content">
+            <h3>Follow us</h3>
+            <ul class="list-sosmed">
+                <li><a href="https://www.instagram.com/custom_kopi.id/"><img src="foto/icons8-instagram-50.png" alt=""></a></li>
+                <li><a href="https://wa.me/081000000000"><img src="foto/icons8-whatsapp-50.png" alt=""></a></li>
+            </ul>
+        </div>
     </footer>
+    <div class="footer-bottom">
+        <p>&copy; 2024, Designed by Shibghoh</p>
+    </div>
 </body>
 
 </html>
